--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,7 @@ development:
   adapter: mysql
   database: getbuz_development
   username: root
-  password: root
+  password: 
   pool: 5
   timeout: 5000
 
@@ -15,7 +15,7 @@ test:
   adapter: mysql
   database: getbuz_test
   username: root
-  password: root
+  password: 
   pool: 5
   timeout: 5000
 
@@ -23,6 +23,6 @@ production:
   adapter: mysql
   database: getbuz_production
   username: root
-  password: root
+  password: 
   pool: 5
   timeout: 5000
